Fix vertical align

--- a/source/assets/stylesheets/_base.sass
+++ b/source/assets/stylesheets/_base.sass
@@ -101,3 +101,6 @@ img
 legend
   color: $light-body-color
   +heading-font-family
+
+.is-grey
+  background-color: $light-grey
