--- a/source/assets/stylesheets/blocks/_grid.sass
+++ b/source/assets/stylesheets/blocks/_grid.sass
@@ -58,10 +58,6 @@
   > .grid__item
     vertical-align: middle
 
-  &.is-grey
-    background-color: $light-grey
-
-
 .grid--bottom
   @extend .grid
   > .grid__item
